--- a/.classpath
+++ b/.classpath
@@ -3,10 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry exported="true" kind="lib" path="F:/Android/adt-bundle-windows-x86_64/adt-bundle-windows-x86_64-20140702/sdk/extras/android/support/v7/recyclerview/libs/android-support-v7-recyclerview.jar"/>
+	<classpathentry exported="true" kind="lib" path="F:/Android/adt-bundle-windows-x86_64/adt-bundle-windows-x86_64-20140702/sdk/extras/android/support/v7/cardview/libs/android-support-v7-cardview.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="F:/Android/adt-bundle-windows-x86_64/adt-bundle-windows-x86_64-20140702/sdk/extras/android/support/v4/android-support-v4.jar"/>
 	<classpathentry exported="true" kind="lib" path="G:/Users/YikunAndroid/workspace4/appcompat_v7/libs/android-support-v4.jar"/>
-	<classpathentry exported="true" kind="lib" path="G:/Users/YikunAndroid/workspace4/appcompat_v7/libs/android-support-v7-appcompat.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
